# HTCS5604ass2_2022s1

./: .gitignore  Player.py  README.md  app.py  functions.py  main.py  pyproject.toml  requirements.txt  test_functions.py
static/css/: style.css
static/js/: script.js
templates/: addplayer.html  deleteplayer.html  home.html  layout.html  playersreport.html  searchplayer.html  updateplayer.html
tests/: test_functions.py
