[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ling Chen", email = "chenl96@myunitec.ac.nz"},
]
dependencies = [
    "click==8.0.3",
    "Flask==2.0.2",
    "Flask-Cors==3.0.10",
    "itsdangerous==2.0.1",
    "Jinja2==3.0.3",
    "MarkupSafe==2.0.1",
    "mysql==0.0.3",
    "mysql-connector-python==8.0.28",
    "mysqlclient==2.1.0",
    "protobuf==3.19.4",
    "simplejson==3.17.6",
    "six==1.16.0",
    "Werkzeug==2.0.2",
    "gunicorn==20.1.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
